--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,35 +1,36 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">      
-      <a class="navbar-brand" href="#">Dating app</a>
+<nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" routerLink="/">Dating app</a>
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       @if (accountService.currentUser()) {
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0" >
-          <li class="nav-item">
-            <a class="nav-link active">Matches</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active">Lists</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active">Messages</a>
-          </li>
-        </ul>
+        <li class="nav-item">
+          <a routerLink="/members" class="nav-link active">Matches</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/lists" class="nav-link active">Lists</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/messages" class="nav-link active">Messages</a>
+        </li>
       }
-      @if (accountService.currentUser()) {
-        <div dropdown class="dropdown">
-          <a dropdownToggle class="dropdown-toggle text-dark text-decoration-none">Welcome user</a>
-          <div *dropdownMenu class="dropdown-menu">
-            <a class="dropdown-item">Edit profile</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" (click)="logout()">Logout</a>
-          </div>
-        </div>
-      }
-      @if (!accountService.currentUser()) {
-        <form #loginForm="ngForm" (ngSubmit)="login()" class="d-flex" autocomplete="off">
-          <input name="username" [(ngModel)]="model.username" class="form-control me-2" placeholder="Username" >
-          <input name="password" [(ngModel)]="model.password" class="form-control me-2" placeholder="Password" type="password">
-          <button class="btn btn-outline-success" type="submit">Login</button>
-        </form>
-      }
+    </ul>
+    @if (accountService.currentUser()) {
+    <div dropdown class="dropdown">
+      <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">Welcome {{this.accountService.currentUser()?.username | titlecase}}</a>
+      <div *dropdownMenu class="dropdown-menu">
+        <a class="dropdown-item">Edit profile</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" (click)="logout()">Logout</a>
+      </div>
     </div>
-  </nav>
+    }
+    @if (!accountService.currentUser()) {
+    <form #loginForm="ngForm" (ngSubmit)="login()" class="d-flex" autocomplete="off">
+      <input name="username" [(ngModel)]="model.username" class="form-control me-2" placeholder="Username">
+      <input name="password" [(ngModel)]="model.password" class="form-control me-2" placeholder="Password"
+        type="password">
+      <button class="btn btn-outline-success" type="submit">Login</button>
+    </form>
+    }
+  </div>
+</nav>
