--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -13,6 +13,9 @@
           <a routerLink="/messages" class="nav-link active">Messages</a>
         </li>
       }
+      <li class="nav-item">
+        <a routerLink="/errors" class="nav-link active">Errors</a>
+      </li>
     </ul>
     @if (accountService.currentUser()) {
     <div dropdown class="dropdown">
