--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,39 +1,47 @@
-<nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/">Dating app</a>
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      @if (accountService.currentUser()) {
-        <li class="nav-item">
-          <a routerLink="/members" class="nav-link active">Matches</a>
-        </li>
-        <li class="nav-item">
-          <a routerLink="/lists" class="nav-link active">Lists</a>
-        </li>
-        <li class="nav-item">
-          <a routerLink="/messages" class="nav-link active">Messages</a>
-        </li>
+<nav class="navbar navbar-expand-md py-2 navbar-dark fixed-top bg-primary">
+  <div class="container">
+
+      <a class="navbar-brand" routerLinkActive="active" routerLink="/">Dating App</a>
+
+
+          <ul class="navbar-nav mr-auto">
+              @if (accountService.currentUser()) 
+              {
+                  <li class="nav-item active">
+                      <a routerLink="/members" routerLinkActive="active" class="nav-link">Matches</a>
+                  </li>
+                  <li class="nav-item active">
+                      <a routerLink="/lists" routerLinkActive="active" class="nav-link">Lists</a>
+                  </li>
+                  <li class="nav-item active">
+                      <a routerLink="/messages" routerLinkActive="active" class="nav-link">Messages</a>
+                  </li>
+          }
+          <li class="nav-item active">
+              <a routerLink="/errors" routerLinkActive="active" class="nav-link">Errors</a>
+          </li>
+          </ul>
+
+      @if (accountService.currentUser()) 
+      {
+          <div dropdown class="dropdown">
+              <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">Welcome {{ accountService.currentUser()?.username | titlecase }}</a>
+              <div *dropdownMenu class="dropdown-menu">
+                  <a class="dropdown-item">Edit profile</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" (click)="logout()">Log Out</a>
+              </div>
+          </div>
       }
-      <li class="nav-item">
-        <a routerLink="/errors" class="nav-link active">Errors</a>
-      </li>
-    </ul>
-    @if (accountService.currentUser()) {
-    <div dropdown class="dropdown">
-      <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">Welcome {{this.accountService.currentUser()?.username | titlecase}}</a>
-      <div *dropdownMenu class="dropdown-menu">
-        <a class="dropdown-item">Edit profile</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" (click)="logout()">Logout</a>
+
+      @if (!accountService.currentUser()) 
+      {
+          
+          <form #loginForm="ngForm" (ngSubmit)="login()" autocomplete="off" class="form-inline d-flex mt-1 mt-md-0">
+              <input name="username" [(ngModel)]="model.username" class="form-control ms-2" type="text" placeholder="Username">
+              <input name="password" [(ngModel)]="model.password" class="form-control ms-2 mr-sm-2" type="password" placeholder="Password">
+              <button class="btn btn-success my-2 ms-2 my-sm-0" type="submit">Login</button>
+          </form>
+      }
       </div>
-    </div>
-    }
-    @if (!accountService.currentUser()) {
-    <form #loginForm="ngForm" (ngSubmit)="login()" class="d-flex" autocomplete="off">
-      <input name="username" [(ngModel)]="model.username" class="form-control me-2" placeholder="Username">
-      <input name="password" [(ngModel)]="model.password" class="form-control me-2" placeholder="Password"
-        type="password">
-      <button class="btn btn-outline-success" type="submit">Login</button>
-    </form>
-    }
-  </div>
 </nav>
