--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -46,7 +46,11 @@
                 </tab>
                 <tab heading="Photos" #photoTab="tab">
                     @if (photoTab.active){
-                        <gallery [items] = "images" class="gallery">
+                        <gallery [items] = "images"
+                            [items]="images"
+                            [itemAutosize]="true"
+                            class="gallery"
+                        >
                         </gallery>
                     }
                 </tab>
