--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,23 +1,63 @@
-<form #registerFrom="ngForm" (ngSubmit)="register()" autocomplete="off">
+<form [formGroup]="registerForm" (ngSubmit)="register()" autocomplete="off">
     <h2 class="text-center text-primary">Sign up</h2>
     <hr>
-    <div class="mb-3 form-floating">
-        <input type="text"
-            class="form-control"
-            name="username" placeholder="Username"
-            [(ngModel)]="model.username" required>
-        <label>Username</label>  
+
+    <div class="mv-3">
+        <label style="margin-bottom: 10px;">
+            I'm a: 
+        </label>
+        <label class="form-check-label" style="margin-left: 8px;">
+            <input type="radio" formControlName="gender" value="male" class="form-check-input" /> Male
+        </label>
+        <label class="form-check-label" style="margin-left: 8px;">
+            <input type="radio" formControlName="gender" value="female" class="form-check-input" /> Female
+        </label>
     </div>
 
-    <div class="mb-3 form-floating">
-        <input type="password"
-            class="form-control"
-            name="password" placeholder="Password"
-            [(ngModel)]="model.password" required>
-        <label>Password</label>  
-    </div>
+    <app-text-input
+        [formControl]="$any(registerForm.get('username'))"
+        [label]="'Username'"
+        [type]="'text'"
+    ></app-text-input>
+    <app-text-input
+        [formControl]="$any(registerForm.get('knownAs'))"
+        [label]="'known As'"
+    ></app-text-input>
+    <app-date-picker
+        [formControl]="$any(registerForm.get('dateOfBirth'))"
+        [label]="'Date of Birth'"
+        [maxDate]="maxDate"
+    ></app-date-picker>
+    <app-text-input
+        [formControl]="$any(registerForm.get('city'))"
+        [label]="'City'"
+    ></app-text-input>
+    <app-text-input
+        [formControl]="$any(registerForm.get('country'))"
+        [label]="'Country'"
+    ></app-text-input>
+    <app-text-input
+        [formControl]="$any(registerForm.get('password'))"
+        [label]="'Password'"
+        [type]="'password'"
+    ></app-text-input>
+    <app-text-input
+    [formControl]="$any(registerForm.get('confirmPassword'))"
+    [label]="'Confirm password'"
+    [type]="'password'"
+    ></app-text-input>
+    @if (validationErrors) {
+        <div class="alert alert-danger text-start">
+            <ul>
+                @for (error of validationErrors; track $index) {
+                    <li>{{error}}</li>
+                }
+            </ul>
+        </div>
+    }
     <div class="form-group text-center">
-        <button class="btn btn-success me-2" type="submit">Register</button>
+        <button [disabled]="!registerForm.valid" class="btn btn-success me-2" type="submit">Register</button>
         <button class="btn btn-default me-2" (click)="cancel()" type="submit">Cancle</button>
     </div>
 </form>
+  
