--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -1,6 +1,6 @@
 <div class="card mb-4">
     <div class="card-img-wrapper">
-        <img src="{{member().photoUrl || '../../../../assets/user.png'}}" class="card-img-top" alt="{{member().knownAs}}">
+        <img src="{{member().photoUrl || 'https://th.bing.com/th/id/OIP.PoS7waY4-VeqgNuBSxVUogAAAA?rs=1&pid=ImgDetMain'}}" class="card-img-top" alt="{{member().knownAs}}">
         <ul class="list-inline member-icons animate text-center">
             <li class="list-inline-item">
                 <button class="btn btn-primary" routerLink="/members/{{member().username}}">
