--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-4">
             <div class="card">
-                <img src="{{member.photoUrl || '../../assets/user.png'}}" 
+                <img src="{{member.photoUrl || 'https://th.bing.com/th/id/OIP.PoS7waY4-VeqgNuBSxVUogAAAA?rs=1&pid=ImgDetMain'}}" 
                     alt="{{member.knownAs}}"
                     class="card-img img-thumbnail"
                 >
@@ -17,11 +17,11 @@
                     </div>
                     <div>
                         <strong>Last Active:</strong>
-                        <p>{{member.lastActive}}</p>
+                        <p>{{member.lastActive | timeago}}</p>
                     </div>
                     <div>
                         <strong>Member since:</strong>
-                        <p>{{member.created}}</p>
+                        <p>{{member.created | date: 'dd MMM, yyyy'}}</p>
                     </div>
                     <div class="card-footer">
                         <div class="btn-group d-flex">
