--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -15,7 +15,7 @@
         </div>
         <div class="col-4">
             <div class="card">
-                <img src="{{member.photoUrl || './assets/user.png'}}" 
+                <img src="{{member.photoUrl}}" 
                     alt="{{member.knownAs}}"
                     class="card-img img-thumbnail"
                 >
@@ -30,11 +30,11 @@
                     </div>
                     <div>
                         <strong>Last Active:</strong>
-                        <p>{{member.lastActive}}</p>
+                        <p>{{member.lastActive | timeago}}
                     </div>
                     <div>
                         <strong>Member since:</strong>
-                        <p>{{member.created}}</p>
+                        <p>{{member.created | date: 'dd MMM, yyyy'}}</p>
                     </div>
                     <div class="card-footer">
                         <button 
