--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -3,10 +3,10 @@
         <img src="{{member().photoUrl || 'https://th.bing.com/th/id/OIP.PoS7waY4-VeqgNuBSxVUogAAAA?rs=1&pid=ImgDetMain'}}" class="card-img-top" alt="{{member().knownAs}}">
         <ul class="list-inline member-icons animate text-center">
             <li class="list-inline-item">
-                <button class="btn btn-primary" routerLink="/members/{{member().username}}">
+                <button class="btn btn-primary" [routerLink]="'/members/' + member().username">
                     <i class="fa fa-user"></i>
                 </button>
-                <button class="btn btn-primary">
+                <button class="btn btn-primary" (click)="toggleLike()">
                     <i class="fa fa-heart"></i>
                 </button>
                 <button class="btn btn-primary">
@@ -17,8 +17,9 @@
     </div>
     <div class="card-body p-1">
         <h6 class="card-title text-center mb-1">
-            <i class="fa fa-user mr-2"></i>
+            <i class="fa fa-user me-2"></i>
             {{member().knownAs}}, {{member().age}}<br>
+            <i *ngIf="hasLiked()" class="fa fa-heart ms-2" style="color: red;"></i>
         </h6>
         <p class="card-text text-muted text-center">{{member().city}}</p>
     </div>
