--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -7,14 +7,17 @@
           <ul class="navbar-nav mr-auto">
               @if (accountService.currentUser()) 
               {
-                  <li class="nav-item active">
+                  <li class="nav-item">
                       <a routerLink="/members" routerLinkActive="active" class="nav-link">Matches</a>
                   </li>
-                  <li class="nav-item active">
+                  <li class="nav-item">
                       <a routerLink="/lists" routerLinkActive="active" class="nav-link">Lists</a>
                   </li>
-                  <li class="nav-item active">
+                  <li class="nav-item">
                       <a routerLink="/messages" routerLinkActive="active" class="nav-link">Messages</a>
+                  </li>
+                  <li class="nav-item" *appHasRole="['Admin', 'Moderator']">
+                      <a routerLink="/admin" routerLinkActive="active" class="nav-link">Admin</a>
                   </li>
           }
           <li class="nav-item active">
