--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -4,6 +4,13 @@
             <img src="{{member.photoUrl || 'https://th.bing.com/th/id/OIP.PoS7waY4-VeqgNuBSxVUogAAAA?rs=1&pid=ImgDetMain'}}"
                 alt="{{member.knownAs}}" class="card-img img-thumbnail">
             <div class="card-body">
+                @if(presenceService.onlineUsers().includes(member.username)){
+                    <div class="mb-2">
+                        <i class="fa fa-user-circle text-success">
+                            Online now
+                        </i>
+                    </div>
+                }
                 <div>
                     <strong>Location:</strong>
                     <p>{{member.city}}, {{member.country}}</p>
@@ -50,8 +57,6 @@
             <tab heading="Messages" (selectTab)="onTabActivated($event)">
                 <app-member-messages 
                     [username]="member.username" 
-                    [messages]="messages"
-                    (updateMessages)="onUpdateMessages($event)"
                 ></app-member-messages>
             </tab>
         </tabset>
