--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -1,10 +1,13 @@
 <div class="card">
-    <div class="car-body">
-        @if (messages().length === 0) {
+    <div class="car-body" #scrollMe 
+        style="overflow-y: scroll; height: 535px;"
+        [scrollTop]="scrollMe.scrollHeight"
+    >
+        @if (messageService.messageThread().length === 0) {
             <p>No messages yet</p>
         } @else {
             <ul class="chat">
-                @for (message of messages(); track message.id) {
+                @for (message of messageService.messageThread(); track message.id) {
                     <li>
                         <div>
                             <span class="chat-img float-end">
@@ -16,7 +19,7 @@
                             <div class="chat-body">
                                 <div class="header">
                                     <small class="text-muted">
-                                        <span class="fa fa-clock-0">
+                                        <span class="fa fa-clock-o">
                                             {{message.messageSent | timeago}}
                                         </span>
                                         @if (!message.dateRead && message.senderUsername !== username()) {
