--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -1,12 +1,18 @@
 <div class="card">
-    <div class="car-body" #scrollMe 
-        style="overflow-y: scroll; height: 535px;"
-        [scrollTop]="scrollMe.scrollHeight"
-    >
+    <div class="car-body">
         @if (messageService.messageThread().length === 0) {
             <p>No messages yet</p>
         } @else {
-            <ul class="chat">
+            <ul 
+                #scrollMe
+                style="
+                    overflow-y: auto; 
+                    overflow-x: hidden; 
+                    max-height: 535px; 
+                    scroll-behavior: smooth;
+                    scrollbar-width: none; 
+                    -ms-overflow-style: none;" 
+                class="chat">
                 @for (message of messageService.messageThread(); track message.id) {
                     <li>
                         <div>
