--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -38,9 +38,8 @@
   
   .member-tabset > .tab-content {
     margin-top: -3px;
-    background-color: #fff;
+    background-color: black;
     border: 0;
-    border-top: 1px solid #eee;
-    padding: 15px 0;
+    border-top: 1px solid black;
   }
   
