--- a/client/src/app/modals/roles-modal/roles-modal.component.html
+++ b/client/src/app/modals/roles-modal/roles-modal.component.html
@@ -2,7 +2,7 @@
     <h4 class="modal-title pull-left">{{title}}</h4>
     <button type="button" 
         class="btn-close close pull-right"
-        (click)="bsModalRef.hide()"
+        (click)="hide()"
     ><span class="visually-hidden">&times;</span></button>
 </div>
 <div class="modal-body">
