--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -9,7 +9,7 @@
 
       <div class="navbar-collapse" [ngClass]="{'collapse': isCollapsed}">
           <ul class="navbar-nav mr-auto">
-              @if (accountService.currentUser()) 
+              @if (currentUser()) 
               {
                   <li class="nav-item">
                       <a routerLink="/members" routerLinkActive="active" class="nav-link">Matches</a>
@@ -29,11 +29,11 @@
               </li>
           </ul>
 
-          @if (accountService.currentUser()) 
+          @if (currentUser()) 
           {
               <div dropdown class="dropdown ms-auto">
-                <img class="me-2" src="{{accountService.currentUser()?.photoUrl  || 'https://th.bing.com/th/id/OIP.PoS7waY4-VeqgNuBSxVUogAAAA?rs=1&pid=ImgDetMain'}}" alt="User main image">
-                  <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">Welcome {{ accountService.currentUser()?.knownAs}}</a>
+                <img class="me-2" src="{{currentUser()?.photoUrl  || 'https://th.bing.com/th/id/OIP.PoS7waY4-VeqgNuBSxVUogAAAA?rs=1&pid=ImgDetMain'}}" alt="User main image">
+                  <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">Welcome {{ currentUser()?.knownAs}}</a>
                   <div *dropdownMenu class="dropdown-menu">
                       <a routerLink="/member/edit" class="dropdown-item">Edit profile</a>
                       <div class="dropdown-divider"></div>
@@ -42,7 +42,7 @@
               </div>
           }
 
-          @if (!accountService.currentUser()) 
+          @if (!currentUser()) 
           {
               <form #loginForm="ngForm" (ngSubmit)="login()" autocomplete="off" class="d-flex mt-2 mt-md-0 ms-auto">
                   <input name="username" [(ngModel)]="model.username" class="form-control ms-2" type="text" placeholder="Username">
