--- a/client/src/app/members/photo-editor/photo-editor.component.html
+++ b/client/src/app/members/photo-editor/photo-editor.component.html
@@ -1,83 +1,176 @@
 <div class="row">
-    @for (photo of member().photos; track photo.id) {
-            <div class="col-2">
-                <img src="{{photo.url}}" alt="photo of user" class="img-thumbnail p-1" 
-                    [class.not-approved]="!photo.isApproved"/>
-                @if (photo.isApproved) {
-                    <div class="text-center">
-                        <button 
-                           class="btn btn-sm me-1"
-                           [disabled]="photo.isMain"
-                           (click)="setMainPhoto(photo)"
-                           [ngClass]="photo.isMain ? 'btn-success active' : 'btn-outline-success'">Main</button>
-                        <button class="btn btn-sm btn-danger"
-                            [disabled]="photo.isMain"
-                            (click)="deletePhoto(photo)"><i class="fa fa-trash"></i></button>
-                    </div>
-                } @else {
-                    <div class="text-center img-text">
-                        <span class="text-danger">Waiting for approval!</span>
-                    </div>
-                }
+  <div
+    class="col-3 card m-2 p-4"
+    *ngFor="let photo of userPhotos; trackBy: trackPhoto"
+  >
+    <div class="position-relative align-items-center d-inline-block">
+      <img
+        [ngClass]="{ 'bg-white bg-opacity-25': !photo.isApproved }"
+        [src]="photo.url"
+        alt="photo of user"
+        class="img-thumbnail mb-1"
+      />
+      <div
+        *ngIf="!photo.isApproved"
+        class="position-absolute top-50 start-50 translate-middle text-white bg-danger bg-opacity-75 px-2 py-1 rounded"
+      >
+        Awaiting approval
+      </div>
+    </div>
+
+    <div class="text-center">
+      <button
+        class="btn btn-sm me-1"
+        [disabled]="photo.isMain"
+        (click)="setMainPhoto(photo)"
+        [ngClass]="photo.isMain ? 'btn-success active' : 'btn-outline-success'"
+      >
+        Main
+      </button>
+      <button
+        [disabled]="photo.isMain"
+        (click)="deletePhoto(photo)"
+        class="btn btn-danger btn-sm"
+      >
+        <i class="fa fa-trash"></i>
+      </button>
+    </div>
+
+    <!-- Tagovi na fotografiji -->
+    <div class="d-flex mt-2 flex-wrap gap-1">
+      <span
+        class="badge bg-secondary text-white d-flex align-items-center"
+        *ngFor="let tag of photo.tags"
+      >
+        {{ tag }}
+        <button
+          type="button"
+          class="btn btn-link btn-sm p-0 ms-1"
+          (click)="removeTagFromPhoto(photo, tag)"
+          title="Remove tag"
+        >
+          <i class="fa fa-trash text-danger"></i>
+        </button>
+      </span>
+    </div>
+
+    <!-- Editor tagova -->
+    <div class="mt-2">
+      <button class="btn btn-primary" (click)="openTagEditor(photo)">
+        {{
+          editingPhotoId === photo.id ? "Close tag editor" : "Edit photo tags"
+        }}
+      </button>
+
+      <div *ngIf="editingPhotoId === photo.id" class="mt-2">
+        <div *ngIf="availableTags.length; else loadingTags">
+          <div
+            class="d-flex flex-wrap gap-2 border rounded p-2 mb-2"
+            style="max-height: 120px; overflow-y: auto"
+          >
+            <div class="form-check me-3" *ngFor="let tag of availableTags">
+              <input
+                class="form-check-input"
+                type="checkbox"
+                [id]="tag + '-' + photo.id"
+                [checked]="selectedTagNames.includes(tag)"
+                (change)="toggleTagSelection(tag)"
+                [disabled]="photo.tags?.includes(tag)"
+              />
+              <label class="form-check-label ms-1" [for]="tag + '-' + photo.id">
+                {{ tag }}
+              </label>
             </div>
-        }
+          </div>
+          <button
+            class="btn btn-success btn-sm mt-2"
+            (click)="submitTagsForPhoto(photo)"
+          >
+            Save Tags
+          </button>
+        </div>
+        <ng-template #loadingTags>
+          <span>Loading tags...</span>
+        </ng-template>
+      </div>
+    </div>
+  </div>
 </div>
 
-<!-- ng file upload -->
-
+<!-- NG FILE UPLOAD -->
 <div class="row mt-5">
-    <!-- Drop photo here section -->
-    <div class="col-md-4">
-        <h3>Add photos</h3>
-        <div ng2FileDrop
-             [ngClass]="{'nv-file-over': hasBaseDropZoneOver}"
-             (fileOver)="fileOverBase($event)"
-             [uploader]="uploader"
-             class="card bg-faded p-5 text-center my-drop-zone">
-             <i class="fa fa-upload fa-3x"></i>
-             Drop photo here
-        </div>
+  <div class="col-md-3">
+    <h3>Add photos</h3>
+    <div
+      ng2FileDrop
+      [ngClass]="{ 'nv-file-over': hasBaseDropZoneOver }"
+      (fileOver)="fileOverBase($event)"
+      [uploader]="uploader"
+      class="card bg-faded p-5 text-center my-drop-zone"
+    >
+      <i class="fa fa-upload fa-3x"></i>
+      Drop photos here
     </div>
+  </div>
 
-    <!-- Upload queue section -->
-    <div class="col-md-8" style="margin-bottom: 40px;" *ngIf="uploader?.queue?.length">
-        <h3>Upload queue</h3>
-        <p>Queue length: {{ uploader?.queue?.length }}</p>
+  <div class="col-md-9 upload-div" *ngIf="uploader?.queue?.length">
+    <h3>Upload queue</h3>
+    <p>Queue length: {{ uploader?.queue?.length }}</p>
 
-        <table class="table">
-            <thead>
-                <tr>
-                    <th width="50%">Name</th>
-                    <th>Size</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let item of uploader?.queue">
-                    <td><strong>{{ item?.file?.name }}</strong></td>
-                    <td *ngIf="uploader?.options?.isHTML5" nowrap>{{ item?.file?.size/1024/1024 | number:'.2' }} MB</td>
-                </tr>
-            </tbody>
-        </table>
+    <table class="table">
+      <thead>
+        <tr>
+          <th width="50%">Name</th>
+          <th>Size</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of uploader?.queue">
+          <td>
+            <strong>{{ item?.file?.name }}</strong>
+          </td>
+          <td *ngIf="uploader?.options?.isHTML5" nowrap>
+            {{ item?.file?.size / 1024 / 1024 | number : ".2" }} MB
+          </td>
+        </tr>
+      </tbody>
+    </table>
 
-        <div>
-            <div>
-                Queue progress:
-                <div class="progress">
-                    <div class="progress-bar" role="progressbar" [ngStyle]="{ 'width': uploader?.progress + '%' }"></div>
-                </div>
-            </div>
-            <button type="button" class="btn btn-success btn-s"
-                    (click)="uploader?.uploadAll()" [disabled]="!uploader?.getNotUploadedItems()?.length">
-                <span class="fa fa-upload"></span> Upload all
-            </button>
-            <button type="button" class="btn btn-warning btn-s"
-                    (click)="uploader?.cancelAll()" [disabled]="!uploader?.isUploading">
-                <span class="fa fa-ban"></span> Cancel all
-            </button>
-            <button type="button" class="btn btn-danger btn-s"
-                    (click)="uploader?.clearQueue()" [disabled]="!uploader?.queue?.length">
-                <span class="fa fa-trash"></span> Remove all
-            </button>
+    <div>
+      <div>
+        Queue progress:
+        <div class="progress">
+          <div
+            class="progress-bar"
+            role="progressbar"
+            [ngStyle]="{ width: uploader?.progress + '%' }"
+          ></div>
         </div>
+      </div>
+      <button
+        type="button"
+        class="btn btn-success btn-s"
+        (click)="uploader?.uploadAll()"
+        [disabled]="!uploader?.getNotUploadedItems()?.length"
+      >
+        <span class="fa fa-upload"></span> Upload all
+      </button>
+      <button
+        type="button"
+        class="btn btn-warning btn-s"
+        (click)="uploader?.cancelAll()"
+        [disabled]="!uploader?.isUploading"
+      >
+        <span class="fa fa-ban"></span> Cancel all
+      </button>
+      <button
+        type="button"
+        class="btn btn-danger btn-s"
+        (click)="uploader?.clearQueue()"
+        [disabled]="!uploader?.queue?.length"
+      >
+        <span class="fa fa-trash"></span> Remove all
+      </button>
     </div>
+  </div>
 </div>
